[metadata]
name = ud-ted
version = 0.0.0
author = Klara Lennermann
author_email = breaklikeafish@gmail.com
description = A tree edit-distance tool for Universal Dependencies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/breaklikeafish/UD-TED
project_urls =
    Bug Tracker = https://github.com/breaklikeafish/UD-TED/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ud_ted
install_requires =
    edist
    numpy>=1.20
    pyconll
    scipy>=1.6

[options.entry_points]
console_scripts =
    ud-ted = ud_ted.cli:main
